--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.4.2
   firebase_auth: ^4.1.4
+  modal_progress_hud_nsn: ^0.3.0
+  flutter_secure_storage: ^6.1.0
 
 dev_dependencies:
   flutter_test:
